--- a/River-Space-Colonization/imgui.ini
+++ b/River-Space-Colonization/imgui.ini
@@ -1,5 +1,10 @@
 [Window][Debug##Default]
-Pos=233,373
-Size=400,400
+Pos=123,148
+Size=361,97
+Collapsed=0
+
+[Window][Test]
+Pos=32,117
+Size=573,316
 Collapsed=0
 
