Adding Perlin Noise generation for terrain

--- a/River-Space-Colonization/River-Space-Colonization.vcxproj
+++ b/River-Space-Colonization/River-Space-Colonization.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="stb_image.cpp" />
+    <ClCompile Include="PerlinNoise.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="TestClearColor.cpp" />
     <ClCompile Include="TestTexture2D.cpp" />
@@ -184,6 +185,7 @@
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
+    <ClInclude Include="PerlinNoise.h" />
     <ClInclude Include="Test.h" />
     <ClInclude Include="TestClearColor.h" />
     <ClInclude Include="TestTexture2D.h" />
