--- a/River-Space-Colonization/imgui.ini
+++ b/River-Space-Colonization/imgui.ini
@@ -4,7 +4,12 @@ Size=361,97
 Collapsed=0
 
 [Window][Test]
-Pos=32,117
+Pos=40,72
 Size=573,316
+Collapsed=0
+
+[Window][Debug]
+Pos=20,66
+Size=540,270
 Collapsed=0
 
