--- a/River-Space-Colonization/River-Space-Colonization.vcxproj
+++ b/River-Space-Colonization/River-Space-Colonization.vcxproj
@@ -161,8 +161,9 @@
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="TestTreeSpaceColonisation.cpp" />
     <ClCompile Include="stb_image.cpp" />
-    <ClCompile Include="PerlinNoise.cpp" />
+    <ClCompile Include="TestPerlinNoise.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="TestClearColor.cpp" />
     <ClCompile Include="TestTexture2D.cpp" />
@@ -184,8 +185,9 @@
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="TestTreeSpaceColonisation.h" />
     <ClInclude Include="stb_image.h" />
-    <ClInclude Include="PerlinNoise.h" />
+    <ClInclude Include="TestPerlinNoise.h" />
     <ClInclude Include="Test.h" />
     <ClInclude Include="TestClearColor.h" />
     <ClInclude Include="TestTexture2D.h" />
@@ -195,7 +197,8 @@
     <ClInclude Include="VertexBufferLayout.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Basic.shader" />
+    <None Include="River.shader" />
+    <None Include="Texture.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
