--- a/River-Space-Colonization/River-Space-Colonization.vcxproj.filters
+++ b/River-Space-Colonization/River-Space-Colonization.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="Source Files\tests">
       <UniqueIdentifier>{88c11681-b787-410d-b203-cf5fff451577}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\SpaceColonisation">
+      <UniqueIdentifier>{7e23a94d-fb00-40ac-bcef-34eff97459f1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Desktop\glad.c">
@@ -81,8 +84,11 @@
     <ClCompile Include="TestTexture2D.cpp">
       <Filter>Source Files\tests</Filter>
     </ClCompile>
-    <ClCompile Include="PerlinNoise.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="TestPerlinNoise.cpp">
+      <Filter>Source Files\tests</Filter>
+    </ClCompile>
+    <ClCompile Include="TestTreeSpaceColonisation.cpp">
+      <Filter>Source Files\SpaceColonisation</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -146,12 +152,18 @@
     <ClInclude Include="TestTexture2D.h">
       <Filter>Source Files\tests</Filter>
     </ClInclude>
-    <ClInclude Include="PerlinNoise.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="TestPerlinNoise.h">
+      <Filter>Source Files\tests</Filter>
+    </ClInclude>
+    <ClInclude Include="TestTreeSpaceColonisation.h">
+      <Filter>Source Files\SpaceColonisation</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Basic.shader">
+    <None Include="Texture.shader">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="River.shader">
       <Filter>Resource Files\Shaders</Filter>
     </None>
   </ItemGroup>
