--- a/River-Space-Colonization/River-Space-Colonization.vcxproj.filters
+++ b/River-Space-Colonization/River-Space-Colonization.vcxproj.filters
@@ -90,6 +90,15 @@
     <ClCompile Include="glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Leaf.cpp">
+      <Filter>Source Files\SpaceColonisation</Filter>
+    </ClCompile>
+    <ClCompile Include="Branch.cpp">
+      <Filter>Source Files\SpaceColonisation</Filter>
+    </ClCompile>
+    <ClCompile Include="LeafGeneration.cpp">
+      <Filter>Source Files\SpaceColonisation</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h">
@@ -156,6 +165,15 @@
       <Filter>Source Files\tests</Filter>
     </ClInclude>
     <ClInclude Include="TestTreeSpaceColonisation.h">
+      <Filter>Source Files\SpaceColonisation</Filter>
+    </ClInclude>
+    <ClInclude Include="Leaf.h">
+      <Filter>Source Files\SpaceColonisation</Filter>
+    </ClInclude>
+    <ClInclude Include="Branch.h">
+      <Filter>Source Files\SpaceColonisation</Filter>
+    </ClInclude>
+    <ClInclude Include="LeafGeneration.h">
       <Filter>Source Files\SpaceColonisation</Filter>
     </ClInclude>
   </ItemGroup>
