--- a/River-Space-Colonization/River-Space-Colonization.vcxproj.filters
+++ b/River-Space-Colonization/River-Space-Colonization.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="LeafGeneration.cpp">
       <Filter>Source Files\SpaceColonisation</Filter>
     </ClCompile>
+    <ClCompile Include="RidgeGeneration.cpp">
+      <Filter>Source Files\SpaceColonisation</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h">
@@ -171,6 +174,9 @@
       <Filter>Source Files\SpaceColonisation</Filter>
     </ClInclude>
     <ClInclude Include="Include.h">
+      <Filter>Source Files\SpaceColonisation</Filter>
+    </ClInclude>
+    <ClInclude Include="RidgeGeneration.h">
       <Filter>Source Files\SpaceColonisation</Filter>
     </ClInclude>
   </ItemGroup>
