--- a/River-Space-Colonization/River-Space-Colonization.vcxproj.filters
+++ b/River-Space-Colonization/River-Space-Colonization.vcxproj.filters
@@ -99,6 +99,12 @@
     <ClCompile Include="RidgeGeneration.cpp">
       <Filter>Source Files\SpaceColonisation</Filter>
     </ClCompile>
+    <ClCompile Include="RootGeneration.cpp">
+      <Filter>Source Files\SpaceColonisation</Filter>
+    </ClCompile>
+    <ClCompile Include="CheckIntersection.cpp">
+      <Filter>Source Files\SpaceColonisation</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h">
@@ -177,6 +183,15 @@
       <Filter>Source Files\SpaceColonisation</Filter>
     </ClInclude>
     <ClInclude Include="RidgeGeneration.h">
+      <Filter>Source Files\SpaceColonisation</Filter>
+    </ClInclude>
+    <ClInclude Include="RootGeneration.h">
+      <Filter>Source Files\SpaceColonisation</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CheckIntersection.h">
       <Filter>Source Files\SpaceColonisation</Filter>
     </ClInclude>
   </ItemGroup>
