--- a/River-Space-Colonization/River-Space-Colonization.vcxproj
+++ b/River-Space-Colonization/River-Space-Colonization.vcxproj
@@ -157,6 +157,7 @@
   <ItemGroup>
     <ClCompile Include="Branch.cpp" />
     <ClCompile Include="glad.c" />
+    <ClCompile Include="HeightGeneration.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
@@ -180,6 +181,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Branch.h" />
+    <ClInclude Include="HeightGeneration.h" />
     <ClInclude Include="imgui\examples\imgui_impl_glfw.h" />
     <ClInclude Include="imgui\examples\imgui_impl_opengl3.h" />
     <ClInclude Include="imgui\imconfig.h" />
