--- a/River-Space-Colonization/River-Space-Colonization.vcxproj.filters
+++ b/River-Space-Colonization/River-Space-Colonization.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="RidgeGeneration.cpp">
       <Filter>Source Files\SpaceColonisation</Filter>
     </ClCompile>
+    <ClCompile Include="HeightGeneration.cpp">
+      <Filter>Source Files\SpaceColonisation</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h">
@@ -181,6 +184,9 @@
     </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HeightGeneration.h">
+      <Filter>Source Files\SpaceColonisation</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
