--- a/River-Space-Colonization/River-Space-Colonization.vcxproj
+++ b/River-Space-Colonization/River-Space-Colonization.vcxproj
@@ -210,6 +210,7 @@
     <ClInclude Include="VertexBufferLayout.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="HeightMap.shader" />
     <None Include="River.shader" />
     <None Include="Texture.shader" />
   </ItemGroup>
