--- a/River-Space-Colonization/River-Space-Colonization.vcxproj.filters
+++ b/River-Space-Colonization/River-Space-Colonization.vcxproj.filters
@@ -196,5 +196,8 @@
     <None Include="River.shader">
       <Filter>Resource Files\Shaders</Filter>
     </None>
+    <None Include="HeightMap.shader">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
