--- a/River-Space-Colonization/River-Space-Colonization.vcxproj
+++ b/River-Space-Colonization/River-Space-Colonization.vcxproj
@@ -86,8 +86,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\OpenGL\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\OpenGL\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\Dependencies\;..\Dependencies\glad\include;..\Dependencies\glm;$(IncludePath)</IncludePath>
+    <LibraryPath>..\Dependencies\GLFW\lib-vc2019;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -158,60 +158,38 @@
     <ClCompile Include="Branch.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="HeightGeneration.cpp" />
-    <ClCompile Include="imgui\imgui.cpp" />
-    <ClCompile Include="imgui\imgui_demo.cpp" />
-    <ClCompile Include="imgui\imgui_draw.cpp" />
-    <ClCompile Include="imgui\imgui_impl_glfw_gl3.cpp" />
     <ClCompile Include="IndexBuffer.cpp" />
     <ClCompile Include="Leaf.cpp" />
     <ClCompile Include="LeafGeneration.cpp" />
+    <ClCompile Include="loadpng.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="RidgeGeneration.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="TestTreeSpaceColonisation.cpp" />
-    <ClCompile Include="stb_image.cpp" />
-    <ClCompile Include="Test.cpp" />
-    <ClCompile Include="TestClearColor.cpp" />
-    <ClCompile Include="TestTexture2D.cpp" />
-    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="VertexArray.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Branch.h" />
     <ClInclude Include="HeightGeneration.h" />
-    <ClInclude Include="imgui\examples\imgui_impl_glfw.h" />
-    <ClInclude Include="imgui\examples\imgui_impl_opengl3.h" />
-    <ClInclude Include="imgui\imconfig.h" />
-    <ClInclude Include="imgui\imgui.h" />
-    <ClInclude Include="imgui\imgui_impl_glfw_gl3.h" />
-    <ClInclude Include="imgui\imgui_internal.h" />
-    <ClInclude Include="imgui\stb_rect_pack.h" />
-    <ClInclude Include="imgui\stb_textedit.h" />
-    <ClInclude Include="imgui\stb_truetype.h" />
     <ClInclude Include="Include.h" />
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="Leaf.h" />
     <ClInclude Include="LeafGeneration.h" />
+    <ClInclude Include="loadpng.h" />
     <ClInclude Include="Renderer.h" />
-    <ClInclude Include="resource.h" />
     <ClInclude Include="RidgeGeneration.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="TestTreeSpaceColonisation.h" />
-    <ClInclude Include="stb_image.h" />
-    <ClInclude Include="Test.h" />
-    <ClInclude Include="TestClearColor.h" />
-    <ClInclude Include="TestTexture2D.h" />
-    <ClInclude Include="Texture.h" />
     <ClInclude Include="VertexArray.h" />
     <ClInclude Include="VertexBuffer.h" />
     <ClInclude Include="VertexBufferLayout.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="General.shader" />
+    <None Include="Height.shader" />
     <None Include="River.shader" />
-    <None Include="Texture.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
