--- a/River-Space-Colonization/River-Space-Colonization.vcxproj.filters
+++ b/River-Space-Colonization/River-Space-Colonization.vcxproj.filters
@@ -145,5 +145,8 @@
     <None Include="SudoCompleteTerrain1.shader">
       <Filter>Resource Files\Shaders</Filter>
     </None>
+    <None Include="RidgeImage.shader">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
